# chipv2

./: .gitignore  LICENSE  README.md  install_dependencies.sh
CHIP_ROS/: CMakeLists.txt  package.xml  setup.py
CHIP_ROS/launch/: chip.launch  chip_basic.launch
CHIP_ROS/src/scripts/: BALANCE.py  CONTROL_MODES.py  DEFAULTS.py  IK.py  LEG_MODEL.py  MASTER.py  RIO_READ_NODE.py  RIO_WRITE_NODE.py  chip_master.py  component.py  leg_load_node.py  rio_data_read_node.py  rio_write_node.py  robot.py  robot_COG_node.py  stabilizer_node.py
SalsaOS Beta v0.0.1/: .project  build.gradle
SalsaOS Beta v0.0.1/src/main/java/edu/mit/chip/: Robot.java
SalsaOS Beta v0.1.1-2021/: build.gradle
SalsaOS Beta v0.1.1-2021/src/main/java/edu/mit/chip/: Main.java  Robot.java
SalsaOS Beta v0.1.1/src/main/java/edu/mit/chip/: Robot.java
chip_v2/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
chip_v2/devel/lib/pkgconfig/: CHIP_ROS.pc
chip_v2/devel/share/CHIP_ROS/cmake/: CHIP_ROSConfig.cmake
chip_v2/src/CHIP_ROS/: package.xml
chip_v2/src/CHIP_ROS/launch/: chip.launch  chip_basic.launch
chip_v2/src/CHIP_ROS/src/scripts/: CHIP.py  CMA.py  DEFAULTS.py  FK.py  RIO_READ_NODE.py  TRAJECTORY.py  tf.py
model/: README.md
model/CHIP CODE/: chip_leg_model_3D.m  chip_leg_model_FINAL_3D.m  chip_leg_model_FINAL_3D.m~  test.m
model/CHIP CODE/auralius-my-matlab-robotics-toolbox-0d186da/: demo_3dofs.mlx
salsa/: .project
salsa/.wpilib/: wpilib_preferences.json
salsa/src/main/java/edu/mit/chip/: Main.java  Robot.java
salsa/src/main/java/edu/mit/chip/mechanisms/: Leg.java
(+34 files in other folders)
